--- a/ADV_C194_4.ipynb
+++ b/ADV_C194_4.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C194.4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMhG+1BfWxScClgY8C4y5oD",
+      "authorship_tag": "ABX9TyPCiQT9Xit3gOmF7cTXF8p3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uYoLIS5RxrNk"
+        "id": "uYoLIS5RxrNk",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "outputId": "4324c43c-b9ea-42a8-8498-eed3daa80450"
       },
       "source": [
         "#Additional-Activty-4\r\n",
-        "##plot the scatter plot based on country wise movies.\r\n",
+        "#Plot the bubble plot for top 5 country who has produce maximum number of movies\r\n",
         "#predefine code\r\n",
         "import pandas as pd\r\n",
         "import matplotlib.pyplot as plt\r\n",
@@ -46,7 +51,9 @@
         "sorted_df\r\n",
         "#predefine code end\r\n",
         "\r\n",
-        "#from the dataframe sorted_df retrive the 5 rows uwing the head() function and store it in variable top_5\r\n",
+        "#Press shift + enter to run the cell and check what columns are there in dataframe\r\n",
+        "\r\n",
+        "#from the dataframe sorted_df retrive first 5 rows using the head() function and store it in variable top_5\r\n",
         "\r\n",
         "#print the variable top_5\r\n",
         "\r\n",
@@ -74,8 +81,118 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Country</th>\n",
+              "      <th>Title</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1059</th>\n",
+              "      <td>United States</td>\n",
+              "      <td>8776</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>477</th>\n",
+              "      <td>India</td>\n",
+              "      <td>1064</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>908</th>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>905</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>117</th>\n",
+              "      <td>Canada</td>\n",
+              "      <td>555</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>34</th>\n",
+              "      <td>Australia</td>\n",
+              "      <td>202</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>507</th>\n",
+              "      <td>Ireland,Australia</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>508</th>\n",
+              "      <td>Ireland,Belgium,France,Luxembourg,United Kingdom</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>509</th>\n",
+              "      <td>Ireland,Belgium,United States</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>511</th>\n",
+              "      <td>Ireland,Canada,Luxembourg,United States,United...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1302</th>\n",
+              "      <td>Zambia,Sweden</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>1303 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                Country  Title\n",
+              "1059                                      United States   8776\n",
+              "477                                               India   1064\n",
+              "908                                      United Kingdom    905\n",
+              "117                                              Canada    555\n",
+              "34                                            Australia    202\n",
+              "...                                                 ...    ...\n",
+              "507                                   Ireland,Australia      1\n",
+              "508    Ireland,Belgium,France,Luxembourg,United Kingdom      1\n",
+              "509                       Ireland,Belgium,United States      1\n",
+              "511   Ireland,Canada,Luxembourg,United States,United...      1\n",
+              "1302                                      Zambia,Sweden      1\n",
+              "\n",
+              "[1303 rows x 2 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     }
   ]
 }
