--- a/ADV_C194_5.ipynb
+++ b/ADV_C194_5.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C194.5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGYl8gT7Ppgn0/RNRXGrO/",
+      "authorship_tag": "ABX9TyNwIfLOM3/uQXK80vPuY8xn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h4OOnkJRq7BA"
+        "id": "h4OOnkJRq7BA",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 796
+        },
+        "outputId": "a86626b8-8e83-4a92-e22a-1d22e0e9822b"
       },
       "source": [
         "#Additional-Activty-5\r\n",
@@ -41,15 +46,306 @@
         "df\r\n",
         "\r\n",
         "#predefine code end\r\n",
+        "#Press shift + enter to run the cell and check what columns are there in dataframe\r\n",
         "\r\n",
-        "#to find the yearly IMDb, first group values of the 'Year' column by applying df.groupby function, and then add the column 'IMDb' inside the sqauare brackets and apply the max() function it, and reset the index to 0 group_by_year.\r\n",
+        "#first group values of the 'Year' column by applying df.groupby function, and then add the column 'IMDb' inside the sqauare brackets and apply the max() function to it, and reset the index to 0 group_by_year.\r\n",
         "\r\n",
         "#print the variable group_by_year\r\n",
         "\r\n",
-        "# using the  group_by_year.loc[] attribute access the values of the column 'Year' present in group_by_year check that the values of column should be equal to 2019.\r\n"
+        "#From the group by, we will search year 2019 using loc[] function,and inside it write the condition to check the column 'Year' present in group_by_year equal to 2019.\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Title</th>\n",
+              "      <th>Year</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>IMDb</th>\n",
+              "      <th>Rotten Tomatoes</th>\n",
+              "      <th>Netflix</th>\n",
+              "      <th>Hulu</th>\n",
+              "      <th>Prime Video</th>\n",
+              "      <th>Disney+</th>\n",
+              "      <th>Type</th>\n",
+              "      <th>Directors</th>\n",
+              "      <th>Genres</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>Language</th>\n",
+              "      <th>Runtime</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Inception</td>\n",
+              "      <td>2010</td>\n",
+              "      <td>13+</td>\n",
+              "      <td>8.8</td>\n",
+              "      <td>87%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Christopher Nolan</td>\n",
+              "      <td>Action,Adventure,Sci-Fi,Thriller</td>\n",
+              "      <td>United States,United Kingdom</td>\n",
+              "      <td>English,Japanese,French</td>\n",
+              "      <td>148.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>The Matrix</td>\n",
+              "      <td>1999</td>\n",
+              "      <td>18+</td>\n",
+              "      <td>8.7</td>\n",
+              "      <td>87%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Lana Wachowski,Lilly Wachowski</td>\n",
+              "      <td>Action,Sci-Fi</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>136.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Avengers: Infinity War</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>13+</td>\n",
+              "      <td>8.5</td>\n",
+              "      <td>84%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Anthony Russo,Joe Russo</td>\n",
+              "      <td>Action,Adventure,Sci-Fi</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>149.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Back to the Future</td>\n",
+              "      <td>1985</td>\n",
+              "      <td>7+</td>\n",
+              "      <td>8.5</td>\n",
+              "      <td>96%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Robert Zemeckis</td>\n",
+              "      <td>Adventure,Comedy,Sci-Fi</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>116.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>5</td>\n",
+              "      <td>The Good, the Bad and the Ugly</td>\n",
+              "      <td>1966</td>\n",
+              "      <td>18+</td>\n",
+              "      <td>8.8</td>\n",
+              "      <td>97%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Sergio Leone</td>\n",
+              "      <td>Western</td>\n",
+              "      <td>Italy,Spain,West Germany</td>\n",
+              "      <td>Italian</td>\n",
+              "      <td>161.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16739</th>\n",
+              "      <td>16739</td>\n",
+              "      <td>16740</td>\n",
+              "      <td>The Ghosts of Buxley Hall</td>\n",
+              "      <td>1980</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6.2</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Bruce Bilson</td>\n",
+              "      <td>Comedy,Family,Fantasy,Horror</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>120.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16740</th>\n",
+              "      <td>16740</td>\n",
+              "      <td>16741</td>\n",
+              "      <td>The Poof Point</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>7+</td>\n",
+              "      <td>4.7</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Neal Israel</td>\n",
+              "      <td>Comedy,Family,Sci-Fi</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>90.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16741</th>\n",
+              "      <td>16741</td>\n",
+              "      <td>16742</td>\n",
+              "      <td>Sharks of Lost Island</td>\n",
+              "      <td>2013</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Neil Gelinas</td>\n",
+              "      <td>Documentary</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16742</th>\n",
+              "      <td>16742</td>\n",
+              "      <td>16743</td>\n",
+              "      <td>Man Among Cheetahs</td>\n",
+              "      <td>2017</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Richard Slater-Jones</td>\n",
+              "      <td>Documentary</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16743</th>\n",
+              "      <td>16743</td>\n",
+              "      <td>16744</td>\n",
+              "      <td>In Beaver Valley</td>\n",
+              "      <td>1950</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>James Algar</td>\n",
+              "      <td>Documentary,Short,Family</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>32.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>16744 rows × 17 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       Unnamed: 0     ID  ...                 Language  Runtime\n",
+              "0               0      1  ...  English,Japanese,French    148.0\n",
+              "1               1      2  ...                  English    136.0\n",
+              "2               2      3  ...                  English    149.0\n",
+              "3               3      4  ...                  English    116.0\n",
+              "4               4      5  ...                  Italian    161.0\n",
+              "...           ...    ...  ...                      ...      ...\n",
+              "16739       16739  16740  ...                  English    120.0\n",
+              "16740       16740  16741  ...                  English     90.0\n",
+              "16741       16741  16742  ...                  English      NaN\n",
+              "16742       16742  16743  ...                  English      NaN\n",
+              "16743       16743  16744  ...                  English     32.0\n",
+              "\n",
+              "[16744 rows x 17 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     }
   ]
 }
