--- a/ADV_C195_2.ipynb
+++ b/ADV_C195_2.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "ADV_C195.2.ipynb",
+      "name": "ADV_C195.2",
       "provenance": [],
-      "authorship_tag": "ABX9TyOrA+eshXzhuDTyhc0EkpAU",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNI7DW1V636HaXLA3eF+z89",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RtUDJkpaIiqD"
+        "id": "82QNLcSDM6M2"
       },
       "source": [
         "#Additional-Activity-2\r\n",
@@ -69,9 +70,9 @@
         "#autopct - set the percentage value upto 1 decimal place\r\n",
         "#radius - set the radius of the pie chart\r\n",
         "\r\n",
-        "plt.show()"
+        "plt.show()\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     }
   ]
