--- a/ADV_C195_2.ipynb
+++ b/ADV_C195_2.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "ADV_C195.2",
+      "name": "ADV_C195.2.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNI7DW1V636HaXLA3eF+z89",
+      "authorship_tag": "ABX9TyNYwMTJ8z//vEtF3inViCJn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "82QNLcSDM6M2"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 328
+        },
+        "id": "xcZNYRG0OG9j",
+        "outputId": "2b21b8ed-c126-4987-cdde-09ffe724792e"
       },
       "source": [
         "#Additional-Activity-2\r\n",
@@ -70,10 +74,105 @@
         "#autopct - set the percentage value upto 1 decimal place\r\n",
         "#radius - set the radius of the pie chart\r\n",
         "\r\n",
-        "plt.show()\r\n"
+        "#plt.show()\r\n"
       ],
       "execution_count": 1,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Events</th>\n",
+              "      <th>month</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td></td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Fog</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Fog , Rain</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Fog , Rain , Thunderstorm</td>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Fog , Thunderstorm</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Rain</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Rain , Snow</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Rain , Thunderstorm</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Thunderstorm</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                      Events  month\n",
+              "0                                12\n",
+              "1                        Fog     12\n",
+              "2                 Fog , Rain     12\n",
+              "3  Fog , Rain , Thunderstorm     11\n",
+              "4         Fog , Thunderstorm      4\n",
+              "5                       Rain     12\n",
+              "6                Rain , Snow      1\n",
+              "7        Rain , Thunderstorm     12\n",
+              "8               Thunderstorm     10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     }
   ]
 }
