--- a/ADV_C195_3.ipynb
+++ b/ADV_C195_3.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C195.3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMwPJCslN4iKLWxP0pZmZEr",
+      "authorship_tag": "ABX9TyPin0p27h+c8boMWoFP2Ti2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "\r\n",
         "\r\n",
         "\r\n",
-        "#using the plt.figure() function set the figure size of the plot by setting the width and heigh of the plot.\r\n",
+        "#using the plt.figure() function set the figure size of the plot by setting the width and height of the plot.\r\n",
         "\r\n",
         "#using the plt.xticks() function set the rotation as vertical to display the label names vertically on x-axis\r\n",
         "\r\n",
@@ -74,7 +74,7 @@
         "plt.ylabel(\"Firespots\", size=14)\r\n",
         "#predefine code end\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
