--- a/ADV_C195_3(Solution).ipynb
+++ b/ADV_C195_3(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C195.3(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOakB2YiX3ZpVk8ajffjNx",
+      "authorship_tag": "ABX9TyM8sg2I5xAiK5j2fEjHFx/r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "group_by_year\r\n",
         "\r\n",
         "\r\n",
-        "#using the plt.figure() function set the figure size of the plot by setting the width and heigh of the plot.\r\n",
+        "#using the plt.figure() function set the figure size of the plot by setting the width and height of the plot.\r\n",
         "plt.figure(figsize=(12, 8))\r\n",
         "#using the plt.xticks() function set the rotation as vertical to display the label names vertically on x-axis\r\n",
         "plt.xticks(rotation='vertical')\r\n",
@@ -77,7 +77,7 @@
         "plt.ylabel(\"Firespots\", size=14)\r\n",
         "#predefine code end\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
