--- a/ADV_C196_3.ipynb
+++ b/ADV_C196_3.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ADV_C196.3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfi+noqeW3Fd/pKHJF/pLS",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOvUTrgU55xKct1kkUmzbp0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,11 +33,11 @@
           "height": 419
         },
         "id": "k23ovETjqwDt",
-        "outputId": "8351260c-e489-4432-b5e2-c84612b0afc3"
+        "outputId": "3fde6e1c-c040-4885-c6c5-46c87afa41b4"
       },
       "source": [
         "#Additional Activity 3\r\n",
-        "#filter the passengers who survived in the Titanic ship and group by age and count the names of the people in that age group.\r\n",
+        "#Find out the total crew members in titanic ship, and total number of crew members who survived in titanic tragedy.\r\n",
         "#predefine code\r\n",
         "#import the required packages \r\n",
         "import pandas as pd\r\n",
@@ -47,19 +48,22 @@
         "#predefine code end\r\n",
         "\r\n",
         "#using the df dataframe, acess the dropna() funciton and store it in variable df\r\n",
-        "\r\n",
+        "df = df.dropna()\r\n",
         "#print the df variable\r\n",
+        "df\r\n",
+        "\r\n",
+        "#inside the print() function write the string as \"Total crew - \"\r\n",
+        "\r\n",
+        "#inside the print(), access the 'Name' column of df dataframe and apply the count() functionality on it\r\n",
+        "\r\n",
         "\r\n",
         "#using the df variable access the loc[] function and inside it access the 'Survived' column of the df dataframe and check if the values are equal to 1.0 and store the dataframe into variable new_df.\r\n",
         "\r\n",
+        "##inside the print() function write the string as \"\"Total Survived crew - \"\r\n",
         "\r\n",
-        "#print the variable new_df\r\n",
-        "\r\n",
-        "#using the new_df variable access the groupby() function and inside it add the 'Age' column and add one more column ['Name'] and apply the count() function on it and reset the index and store it in variable  groupby_age.\r\n",
-        "\r\n",
-        "#print the variable groupby_age\r\n"
+        "#inside the print(), access the 'Survived' column of new_df dataframe and apply the count() functionality on it\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,58 +158,58 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>854</th>\n",
-              "      <td>3</td>\n",
-              "      <td>Hartley, Mr. Wallace Henry</td>\n",
+              "      <th>765</th>\n",
+              "      <td>384</td>\n",
+              "      <td>Wright, Mr. William</td>\n",
+              "      <td>40</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>Glory Hole Steward</td>\n",
+              "      <td>Victualling</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>766</th>\n",
+              "      <td>385</td>\n",
+              "      <td>Yearsley, Mr. Harry</td>\n",
+              "      <td>38</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>First Class Saloon Steward</td>\n",
+              "      <td>Victualling</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>779</th>\n",
+              "      <td>11</td>\n",
+              "      <td>Bowker, Miss Ruth</td>\n",
+              "      <td>27</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>Cashier</td>\n",
+              "      <td>Restaurant</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>799</th>\n",
+              "      <td>31</td>\n",
+              "      <td>Martin, Miss Margaret Edwina \"Mabel\"</td>\n",
+              "      <td>20</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>Cashier</td>\n",
+              "      <td>Restaurant</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>801</th>\n",
               "      <td>33</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Bandmaster</td>\n",
-              "      <td>Musician</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>855</th>\n",
-              "      <td>4</td>\n",
-              "      <td>Hume, Mr. John Law \"Jock\"</td>\n",
-              "      <td>21</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Violinist</td>\n",
-              "      <td>Musician</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>856</th>\n",
-              "      <td>5</td>\n",
-              "      <td>Krins, Mr. Georges Alexandre</td>\n",
-              "      <td>23</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Violinist</td>\n",
-              "      <td>Musician</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>857</th>\n",
-              "      <td>6</td>\n",
-              "      <td>Taylor, Mr. Percy Cornelius</td>\n",
-              "      <td>32</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Cellist</td>\n",
-              "      <td>Musician</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>858</th>\n",
-              "      <td>7</td>\n",
-              "      <td>Woodward, Mr. John Wesley</td>\n",
-              "      <td>32</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Cellist</td>\n",
-              "      <td>Musician</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>Maugé, Mr. Paul Achille Maurice Germain</td>\n",
+              "      <td>25</td>\n",
+              "      <td>Southampton</td>\n",
+              "      <td>Kitchen Clerk</td>\n",
+              "      <td>Restaurant</td>\n",
+              "      <td>1.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>859 rows × 7 columns</p>\n",
+              "<p>272 rows × 7 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -216,19 +220,19 @@
               "3             3  ...      1.0\n",
               "4             4  ...      1.0\n",
               "..          ...  ...      ...\n",
-              "854           3  ...      NaN\n",
-              "855           4  ...      NaN\n",
-              "856           5  ...      NaN\n",
-              "857           6  ...      NaN\n",
-              "858           7  ...      NaN\n",
+              "765         384  ...      1.0\n",
+              "766         385  ...      1.0\n",
+              "779          11  ...      1.0\n",
+              "799          31  ...      1.0\n",
+              "801          33  ...      1.0\n",
               "\n",
-              "[859 rows x 7 columns]"
+              "[272 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     }
