--- a/ADV_C196_3(Solution).ipynb
+++ b/ADV_C196_3(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C196.3(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM1teSHxbhMiLB78YgZnEPl",
+      "authorship_tag": "ABX9TyNtvnuV8nbYpK8nc9Ion1ow",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       },
       "source": [
         "#Additional Activity 3\r\n",
-        "#filter the passengers who survived in the Titanic ship and group by age and count the names of the people in that age group.\r\n",
+        "#Find out the total crew members in titanic ship, and total number of crew members who survived in titanic tragedy.\r\n",
         "#predefine code\r\n",
         "#import the required packages \r\n",
         "import pandas as pd\r\n",
@@ -63,7 +63,7 @@
         "#inside the print(), access the 'Survived' column of new_df dataframe and apply the count() functionality on it\r\n",
         "print(new_df['Survived'].count())"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
