--- a/ADV_C196_4.ipynb
+++ b/ADV_C196_4.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C196.4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNAc/eMPtFyzvvwvZsRThI5",
+      "authorship_tag": "ABX9TyNmhJLDwnJ007bCTT0ev1SB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,8 @@
       },
       "source": [
         "#Additional Activity 4\r\n",
+        "\r\n",
+        "#Note: before coding this activity, click on the run button, to get the dataframe table\r\n",
         "#plotting the histogram for the cabin crew members of different age groups who survived. \r\n",
         "#predefine code\r\n",
         "#import the required packages \r\n",
@@ -63,7 +65,18 @@
         "\r\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3S69wpWYfDNT"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
