--- a/ADV_C196_5.ipynb
+++ b/ADV_C196_5.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C196.5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKPE4sOyiW/2YrCumT44aL",
+      "authorship_tag": "ABX9TyMAO+cclNqvli5loVcVebu+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       },
       "source": [
         "#Additional Activity 5\r\n",
-        "#plot the bar graph for counting the crew members who were at differnt positions in titanic ship.\r\n",
+        "#plot the bar graph for showing crew members who died at differnt positions in titanic ship.\r\n",
         "#predefine code\r\n",
         "import pandas as pd\r\n",
         "import matplotlib.pyplot as plt\r\n",
@@ -77,7 +77,7 @@
         "#colour as per you.\r\n",
         " #bar-grap\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
