--- a/ADV_C196_5(Solution).ipynb
+++ b/ADV_C196_5(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C196.5(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOpelfqdu48w1iJeyqsGWbI",
+      "authorship_tag": "ABX9TyN5ICGA0Xj2LO6sJMDHmw8w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       },
       "source": [
         "#Additional Activity 5\r\n",
-        "#plot the bar graph for counting the crew members who were at differnt positions in titanic ship.\r\n",
+        "#plot the bar graph for showing crew members who died at differnt positions in titanic ship.\r\n",
         "#predefine code\r\n",
         "import pandas as pd\r\n",
         "import matplotlib.pyplot as plt\r\n",
@@ -80,7 +80,7 @@
         "#colour as per you.\r\n",
         "plt.bar(label, value,width=0.4, color=('red','blue','green','pink','yellow')) #bar-grap\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
