--- a/ADV_C197_1.ipynb
+++ b/ADV_C197_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV-C197.1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNeS8kkgYxZAX/LvAG7iaM5",
+      "authorship_tag": "ABX9TyPfnxsLm3n98afiIngbFQvF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,9 +48,9 @@
         "df\r\n",
         "#Predefine end\r\n",
         "\r\n",
-        "#inside the dataframe df, create a column 'month' like this df['month'] and inside it store the fethched month from 'time' column. For this access the DatetimeIndex() function using the pd alias,and inside the function write df['time'], and using the '.' operator fetch the month from it.\r\n",
+        "#inside the dataframe df, create a column 'month' like this df['month'] and inside it store the fetched month from 'time' column. For this access the DatetimeIndex() function using the pd alias,and inside the function write df['time'], and using the '.' operator fetch the month from it.\r\n",
         "\r\n",
-        "#inside the dataframe df, create a column 'time-hours' like this df['time'] and inside it store the fethched time from 'time' column. For this access the DatetimeIndex() function using the pd alias,and inside the function write df['time'], and using the '.' operator fetch the time from it.\r\n",
+        "#inside the dataframe df, create a column 'time-hours' like this df['time'] and inside it store the fetched time from 'time' column. For this access the DatetimeIndex() function using the pd alias,and inside the function write df['time'], and using the '.' operator fetch the time from it.\r\n",
         "\r\n",
         "#print the variable df to get the output.\r\n",
         "\r\n",
@@ -58,7 +58,7 @@
         "\r\n",
         "#Note: run the code, you will get the updated dataframe/table, with month and time_hours columns added to it."
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
