--- a/ADV_C197_3.ipynb
+++ b/ADV_C197_3.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV-C197.3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMrUHhp1/ioq9mzFsOXgstS",
+      "authorship_tag": "ABX9TyORbPRJf2M5x6b7F2hp1HU/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,9 +80,9 @@
         "\r\n",
         "#using the sns access the function heatmap(), and inside the function set the parameters as\r\n",
         "#df_heatmap\r\n",
-        "#cmap= 'autumn'\r\n"
+        "#cmap= (you can set the color for cmap from the given link - https://matplotlib.org/3.1.1/gallery/color/colormap_reference.html)\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
