--- a/ADV_C197_3(Solution).ipynb
+++ b/ADV_C197_3(Solution).ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ADV-C197.3(Solution).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKCbu8PSIebk0C0tX+7w1r",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPVvC+4g+rL7AINe36WCe+1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,10 +81,10 @@
         "\r\n",
         "#using the sns access the function heatmap(), and inside the function set the parameters as\r\n",
         "#df_heatmap\r\n",
-        "#cmap= 'autumn'\r\n",
+        "#cmap=  (you can set the color for cmap from the given link - https://matplotlib.org/3.1.1/gallery/color/colormap_reference.html)\r\n",
         "sns.heatmap(df_heatmap, cmap ='autumn') "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
