--- a/ADV_C197_5(Solution).ipynb
+++ b/ADV_C197_5(Solution).ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ADV-C197.5(Solution).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjfQzAuilysurc57Dhz8YE",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP2Blp+zAPAhX8JQLqPO47k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +63,7 @@
         "\r\n",
         "#plotting histogram\r\n",
         "#using the plt.hist() function plot the histogram, by setting the following parameters\r\n",
-        "#new_dataframe ['WIND_DIREC'].head(50)- fetch the first 50 values of the column WIND_DIREC\r\n",
+        "#new_dataframe ['WIND_DIREC'].head(25)- fetch the first 25 values of the column WIND_DIREC\r\n",
         "#bins= 10- set the bins as per you\r\n",
         "#label- set the label as per you.\r\n",
         "plt.hist(new_dataframe ['WIND_DIREC'].head(25), bins=10, label=\"Wind Direction\")\r\n",
@@ -77,7 +78,7 @@
         "plt.legend()\r\n",
         "plt.show()\r\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
