--- a/ADV_C199_5.ipynb
+++ b/ADV_C199_5.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C199.5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOHeAqojJg0ABp8ndg6Oc4u",
+      "authorship_tag": "ABX9TyNV0QHoiTN3rUdBuQpbIq74",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,8 @@
       },
       "source": [
         "#AA5-Generate a Table by taking a number input from the user and the table should get displaye on click of the button.\r\n",
-        "\r\n",
+        "from ipywidgets import widgets\r\n",
+        "from IPython.display import display\r\n",
         "#we have defined a variable input_text, and inside it we have stored an input box, this input box is created using the widgets.Text() function.\r\n",
         "input_text = widgets.Text()\r\n",
         "#using the display() function display the input_text variable to display the input box on the console.\r\n",
