--- a/ADV_C199_4(Solution).ipynb
+++ b/ADV_C199_4(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C199.4(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMoJEr6GTPcQasCiulqDSeJ",
+      "authorship_tag": "ABX9TyMfGoJNTKgnb1yeJhO/NS3A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "    global dropdown1\r\n",
         "    #inside this function declare the variable  dropdown1 as global to use it inside the function\r\n",
         "    global dropdown2\r\n",
-        "    #define a variable  Multiplication and inside it store the  Multiplication of values taken from drop down widget. For this, access the values of dropdown1 using .value like this dropdown1.value and access the values of dropdown2 using .value like this dropdown2.value then add these values using '*' operator.\r\n",
+        "    #define a variable  Multiplication and inside it store the  Multiplication of values taken from drop down widget. For this, access the values of dropdown1 using .value like this dropdown1.value and access the values of dropdown2 using .value like this dropdown2.value then multiply these values using '*' operator.\r\n",
         "    Multiplication=dropdown1.value*dropdown2.value\r\n",
         "    #then print the variable Multiplication using the print() function\r\n",
         "    print(Multiplication)\r\n",
