--- a/ADV_C199_2(Solution).ipynb
+++ b/ADV_C199_2(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C199.2(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPLkFTWLlrTpuwt6tMiiJop",
+      "authorship_tag": "ABX9TyOGE4TbIenTNE3+7UfUeeCd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -333,18 +333,18 @@
         "\r\n",
         "#predefined end\r\n",
         "\r\n",
-        "#define a variable dropdown1, and inside it store a dropdown widget. So to createa dropdown widget, use the widgets.Dropdown() function, and inside this function pass two parameters \r\n",
+        "#define a variable dropdown1, and inside it store a dropdown widget. So to create a dropdown widget, use the widgets.Dropdown() function, and inside this function pass two parameters \r\n",
         "#options= , and store the variable List1 which holds the list of numbers from 1 to 50.\r\n",
         "#description= ,this holds a string 'List 1' to represent the dropdown.\r\n",
         "dropdown1=widgets.Dropdown(options = List1,description='List 1')\r\n",
         "#call the function display() to display the drop down in the output cell, and inside it store the variable dropdown1, which holds the drop down widget.\r\n",
         "display(dropdown1)\r\n",
-        "#similarly create one more dropdown widget  dropdown2 using the widgets.Dropdown() function, and inside it store List2 as the value to parameter, and string 'List 2' as description to dropdown2\r\n",
+        "#similarly create one more dropdown widget  dropdown2 using the widgets.Dropdown() function, and inside it pass List2 as the value to parameter, and string 'List 2' as description to dropdown2\r\n",
         "dropdown2=widgets.Dropdown(options = List2,description='List 2')\r\n",
         "#call the function display() to display the drop down in the output cell, and inside it store the variable dropdown2, which holds the drop down widget.\r\n",
         "display(dropdown2)      \r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
